[package]
name = "rtile"
version = "1.0.0"
edition = "2021"
exclude = ["/tests"]
description = "text processing"
license = "MIT"
documentation = "https://docs.rs/rtile"
repository = "https://github.com/madanmohany/rtile"
readme = "README.md"
keywords = ["code-generation", "template"]
categories = ["template-engine"]

[lib]
name = "rtile"
#crate-type = ["dylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
