[package]
name = "rtile"
version = "2.0.0"
edition = "2021"
exclude = ["/tests"]
description = "For code generation."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rtile"
repository = "https://github.com/madanmohany/rtile"
readme = "README.md"
keywords = ["code-generation", "template"]
categories = ["template-engine"]

[lib]
name = "rtile"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
